Implement slide navigation controls
Added slide navigation controls with previous and next buttons.

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <div class="app-container">
         <!-- Navigation -->
         <nav class="slide-nav">
-            <button class="nav-btn active" data-slide="0">Title</button>
-            <button class="nav-btn" data-slide="1">Introduction</button>
-            <button class="nav-btn" data-slide="2">Original Analysis</button>
-            <button class="nav-btn" data-slide="3">External Factors</button>
-            <button class="nav-btn" data-slide="4">Cannabis Applications</button>
-            <button class="nav-btn" data-slide="5">THCA Reaction Diagram</button>
-            <button class="nav-btn" data-slide="6">References</button>
+         <!-- Slide Navigation Controls (positioned in bottom right corner) -->
+<div class="slide-controls">
+    <button id="prev-slide" class="control-btn" onclick="previousSlide()">‹ Previous</button>
+    <span id="slide-counter" class="slide-counter">1 / 7</span>
+    <button id="next-slide" class="control-btn" onclick="nextSlide()">Next ›</button>
+</div>
+
         </nav>
 
         <!-- Slide 0: Title -->
